# enpm663_spring2024

./: .gitignore  README.md
av_demo/: CMakeLists.txt  package.xml
av_demo/av_demo/: av_actions_interface.py  av_cameras_interface.py  av_sensors_interface.py
av_demo/config/: params.yaml
av_demo/include/av_demo/: av_actions_interface.hpp  av_cameras_interface.hpp  av_sensors_interface.hpp
av_demo/launch/: av_demo.launch.py
av_demo/script/: av_cameras_demo.py  av_sensors_demo.py
av_demo/src/: av_actions_demo.cpp  av_cameras_demo.cpp  av_sensors_demo.cpp
diagram/: async_service.wsd  sync_service.wsd
executor_demo/: CMakeLists.txt  package.xml
executor_demo/executor_demo/: executor_demo_interface.py  executor_interface.py
executor_demo/include/executor_demo/: executor_demo_interface.hpp
executor_demo/script/: dual_mutually_exclusive_exe.py  exclusive_reentrant_exe.py  executor_demo.py  reentrant_exe.py  singlethreaded_executor_exe.py
executor_demo/src/: dual_mutually_exclusive.cpp  exclusive_reentrant.cpp  reentrant.cpp  singlethreaded_executor.cpp
first_package/: CMakeLists.txt  package.xml
first_package/first_package/: advanced_interface.py  advanced_node.py  publisher_interface.py  publisher_node.py  subscriber_interface.py  subscriber_node.py
first_package/include/first_package/: advanced_interface.hpp  advanced_node.hpp  publisher_interface.hpp  publisher_node.hpp  subscriber_interface.hpp  subscriber_node.hpp
first_package/script/: advanced_demo.py  advanced_node.py  minimal_demo.py  minimal_node.py  publisher_demo.py  publisher_node.py  subscriber_demo.py  subscriber_node.py
first_package/src/: advanced_demo.cpp  advanced_node.cpp  minimal_demo.cpp  minimal_node.cpp  publisher_demo.cpp  publisher_node.cpp  subscriber_demo.cpp  subscriber_node.cpp
frame_demo/: CMakeLists.txt  package.xml
frame_demo/frame_demo/: frame_demo_interface.py
frame_demo/include/: broadcaster_demo.hpp  kdl_frame_demo.hpp  listener_demo.hpp  utils.hpp
frame_demo/script/: frame_broadcaster_demo.py  frame_kdl_demo.py
frame_demo/src/: broadcaster_demo.cpp  kdl_frame_demo.cpp  listener_demo.cpp  main.cpp  utils.cpp
interface_demo_msgs/: CMakeLists.txt  package.xml
interface_demo_msgs/msg/: VehicleStatus.msg
interface_demo_msgs/srv/: GetSpeedProfile.srv
message_test_demo/: CMakeLists.txt  package.xml
message_test_demo/include/message_test_demo/: message_test_demo_interface.hpp  service_client_demo_interface.hpp  service_client_subscriber_interface.hpp  service_client_timer_interface.hpp  service_server_demo_interface.hpp
message_test_demo/launch/: service_demo.launch.py
message_test_demo/message_test_demo/: message_test_demo_interface.py  service_client_subscriber_interface.py  service_client_timer_interface.py  service_server_interface.py
message_test_demo/script/: message_test_exe.py  service_client_subscriber_demo.py  service_client_timer_demo.py  service_server_exe.py
message_test_demo/src/: message_test_demo.cpp  service_client_demo.cpp  service_client_subscriber_demo.cpp  service_client_timer_demo.cpp  service_server_demo.cpp
service_demo/: CMakeLists.txt  package.xml
service_demo/diagram/: service.wsd
